# cpp11_compile_time_workshop

./: README.md  TODO
workshop/1-nullptr/: CMakeLists.txt  README.md
workshop/1-nullptr/src/: main.cpp
workshop/10-override-final/: CMakeLists.txt  README.md
workshop/10-override-final/src/: main.cpp
workshop/11-default-delete/: CMakeLists.txt  README.md
workshop/11-default-delete/src/: main.cpp
workshop/12-strongly-typed-enums/: README.md
workshop/12-strongly-typed-enums/src/: main.cpp
workshop/13-alias-templates/: CMakeLists.txt  README.md
workshop/13-alias-templates/src/: main.cpp
workshop/2-auto/: CMakeLists.txt  README.md
workshop/2-auto/src/: classes.hpp  main.cpp
workshop/3-c-iterators/: CMakeLists.txt  README.md
workshop/3-c-iterators/src/: external_lib.hpp  main.cpp
workshop/4-unified-initialization/: CMakeLists.txt  README.md
workshop/4-unified-initialization/src/: main.cpp
workshop/5-extern-templates/: CMakeLists.txt  README.md
workshop/5-extern-templates/src/: main.cpp  print1.cpp  print2.cpp  print3.cpp  print4.cpp  print5.cpp  print6.cpp  print7.cpp  print8.cpp  print9.cpp  prints.hpp
workshop/6-constexpr/: CMakeLists.txt  README.md
workshop/6-constexpr/src/: main.cpp
workshop/7-variadic-templates/: CMakeLists.txt  README.md
workshop/7-variadic-templates/src/: main.cpp
workshop/8-initializer-list/: CMakeLists.txt  README.md
workshop/8-initializer-list/src/: main.cpp
workshop/9-alternative-function-definition/: CMakeLists.txt  README.md
workshop/9-alternative-function-definition/src/: main.cpp
